# inspect

./: .gitignore  README.md
logs/: 2026-02-14T21-48-31+00-00_hello-world_AzbKsayz2tJmRWo6Vkqn83.eval  (+37 more)
task/: .gitignore  AGENTS.md  Makefile  README.md  api.py  inspect_logs_example.py  package-lock.json  pyproject.toml  requirements.txt
task/dont_spoil_my_surprise/: constants.py  task.py
task/dont_spoil_my_surprise/assets/: emails.jsonl  eval_prompt.txt  nudge.yaml  store_items.jsonl  task_description.txt
task/dont_spoil_my_surprise/scoring/: get_email_results.py  metrics.py  model_grading.py  score.py
task/dont_spoil_my_surprise/tools/: email_tool.py  store_order_tool.py
task/dont_spoil_my_surprise/utils/: utils.py
task/frontend/src/: App.css  App.tsx
task/logs/: 2025-06-05T20-47-00+01-00_dont-spoil-my-surprise-task_c3cqXmXu8uRigEdDHZ4TFT.eval  2025-06-05T20-48-12+01-00_dont-spoil-my-surprise-task_QX4pRP6XaEDewcpY8u6ahP.eval  2026-02-17T11-27-44+00-00_dont-spoil-my-surprise-task_cohAsHDpEkcpfSCSwRGK5s.eval  2026-02-17T15-10-12+00-00_dont-spoil-my-surprise-task_KhahRdgZK5fdt7TWvKNrtg.eval  2026-02-17T15-11-48+00-00_dont-spoil-my-surprise-task_UYgLqgZAEqNQVgoRZsrUEe.eval  2026-02-17T15-15-21+00-00_dont-spoil-my-surprise-task_CZX7rhicpjTx2Go3dkG4ha.eval  2026-02-17T15-17-08+00-00_dont-spoil-my-surprise-task_3MC5iuc3D5wXJDB6hkT8Wv.eval
task/output/: 2026-02-17T11-27-44+00-00_dont-spoil-my-surprise-task_cohAsHDpEkcpfSCSwRGK5s.eval_conversation.json  2026-02-17T15-17-08+00-00_dont-spoil-my-surprise-task_3MC5iuc3D5wXJDB6hkT8Wv.eval_conversation.json  OUTPUT.md
(+9 files in other folders)
