[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dont_spoil_my_surprise"

version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "inspect-ai==0.3.95",
    "openai>=v1.75.0",
    "anthropic==0.49.0",
    "google-generativeai==0.8.4",
    "fastapi[standard]==0.115.4",
    "pydantic==2.10.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "ruff",
    "pyright",
]

[tool.hatch.build.targets.wheel]
packages = ["dont_spoil_my_surprise"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
]
ignore = [
    "E501",  # Line too long: we want to allow long string literals
]
